[gd_scene load_steps=8 format=3 uid="uid://wnx76snk3gsv"]

[ext_resource type="Script" uid="uid://bgapu4g028d2l" path="res://scenes/game_credits_scene.gd" id="1_hm6fw"]
[ext_resource type="PackedScene" uid="uid://c2uyakudkl07q" path="res://ui/components/game_credits.tscn" id="2_jcp86"]
[ext_resource type="Theme" uid="uid://d22mpqutkotsu" path="res://ui/theme.tres" id="3_pfpuo"]
[ext_resource type="PackedScene" uid="uid://bkk87o2ooo6at" path="res://ui/overlays/fade_overlay.tscn" id="4_hm6fw"]
[ext_resource type="PackedScene" uid="uid://bqvg18qq2j1p7" path="res://ui/components/MenuMusicPlayer.tscn" id="5_1xq4j"]
[ext_resource type="AudioStream" uid="uid://d4k7aggoegl6x" path="res://assets/Sounds/SFX/UIHover.mp3" id="6_hm6fw"]
[ext_resource type="AudioStream" uid="uid://djbgioq2j2lud" path="res://assets/Sounds/SFX/UIPress.mp3" id="7_gpvo4"]

[node name="GameCreditsScene" type="Node2D"]
script = ExtResource("1_hm6fw")

[node name="UI" type="CanvasLayer" parent="."]

[node name="CenterContainer" type="CenterContainer" parent="UI"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="UI/CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="GameCredits" parent="UI/CenterContainer/VBoxContainer" instance=ExtResource("2_jcp86")]
layout_mode = 2

[node name="ReturnButton" type="Button" parent="UI/CenterContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("3_pfpuo")
text = "Back
"

[node name="FadeOverlay" parent="UI" instance=ExtResource("4_hm6fw")]
unique_name_in_owner = true
visible = false

[node name="MenuMusicPlayer" parent="." instance=ExtResource("5_1xq4j")]

[node name="UiHover" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_hm6fw")
volume_db = -5.0
bus = &"Sound"

[node name="UiPress" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_gpvo4")
volume_db = -5.0
bus = &"Sound"
